# QRCam

./: CMakeLists.txt  README.md  qrcam.cpp  qrcam.h  qrscanner.cpp
